// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AggregationFilters does not render aggregations when numberOfResults is 0 1`] = `""`;

exports[`AggregationFilters does not render aggregations with empty buckets 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className=""
    gutter={32}
    key="agg1"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {},
          ]
        }
        name="Aggregation 1"
        onChange={[Function]}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders aggregations when numberOfResults is 0 and displayWhenNoResults is true 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className=""
    gutter={32}
    key="agg"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Jessica Jones"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 0,
            },
          ]
        }
        name="Jessica Jones"
        onChange={[Function]}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders with all props set [inline] 1`] = `
<Row
  className="bg-white pv3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className="md-pb3"
    gutter={32}
    key="agg1"
    lg={5}
    xs={24}
  >
    <EventTracker
      eventId="Facet-[Range] Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="range"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="[Range] Aggregation 1"
        onChange={[Function]}
        selections="foo"
      />
    </EventTracker>
  </Col>
  <Col
    className="md-pb3"
    gutter={32}
    key="agg2"
    lg={5}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </Col>
</Row>
`;

exports[`AggregationFilters renders with all props set 1`] = `
<Row
  className="bg-white pa3"
  gutter={0}
  justify="space-between"
  type="flex"
>
  <Col
    className=""
    gutter={32}
    key="agg1"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-[Range] Aggregation 1"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="range"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo",
              "doc_count": 1,
            },
          ]
        }
        name="[Range] Aggregation 1"
        onChange={[Function]}
        selections="foo"
      />
    </EventTracker>
  </Col>
  <Col
    className=""
    gutter={32}
    key="agg2"
    lg={24}
    xs={24}
  >
    <EventTracker
      eventId="Facet-Aggregation 2"
      eventPropName="onChange"
      extractEventArgsToForward={null}
    >
      <AggregationFilter
        aggregationType="checkbox"
        buckets={
          Immutable.List [
            Immutable.Map {
              "key": "foo_2",
              "doc_count": 1,
            },
          ]
        }
        name="Aggregation 2"
        onChange={[Function]}
        splitDisplayName={true}
      />
    </EventTracker>
  </Col>
</Row>
`;
